umap/static/umap/base.css
/* ... */
#umap-ui-container.dark .toolbox li {
    color: #d3dfeb;
    border: 1px solid #202425;
}
#umap-ui-container .toolbox li:hover {
    color: #2e3436;
    background-color: #d4d4d2;
}
#umap-ui-container.dark .toolbox li:hover {
    color: #eeeeec;
    background-color: #353c3e;
}
#umap-ui-container .toolbox li + li {
    margin-right: 5px;
    margin-left: 5px;
}
.dark input, .dark textarea {
    background-color: #232729;
    border-color: #1b1f20;
    /*box-shadow: inset 0 0 0 1px #215d9c;*/
    color: #efefef;
}
input:invalid {
    border-color: red;
    background-color: darkred;
}


/* *********** */
/*   Alerts    */
/* *********** */
#umap-alert-container {
    min-height: 46px;
    line-height: 46px;
    padding-left: 10px;
    width: calc(100% - 500px);
    position: absolute;
    top: -46px;
    left: 250px;  /* Keep save/cancel button accessible. */
    right: 250px;
    box-shadow: 0 1px 7px #999999;
    visibility: hidden;
    background: none repeat scroll 0 0 rgba(20, 22, 23, 0.8);
    font-weight: bold;
    color: #fff;
    font-size: 0.8em;
    z-index: 1012;
    border-radius: 2px;
}
#umap-alert-container.error {
    background-color: #c60f13;
}
.umap-alert #umap-alert-container {
    visibility: visible;
    top: 23px;
}
.umap-alert .umap-action {
    margin-left: 10px;
    background-color: #fff;
    color: #000;
    padding: 5px;
    border-radius: 4px;
}
.umap-alert .umap-action:hover {
    color: #000;
}
.umap-alert .error .umap-action {
    background-color: #666;
    color: #eee;
}
.umap-alert .error .umap-action:hover {
    color: #fff;
}
.umap-alert input {
    padding: 5px;
    border-radius: 4px;
    width: 100%;
}

/* *********** */
/*   Tooltip   */
/* *********** */
#umap-tooltip-container {
    line-height: 20px;
    padding: 5px 10px;
    width: auto;
    position: absolute;
    box-shadow: 0 1px 7px #999999;
    display: none;
    background-color: rgba(40, 40, 40, 0.8);
    color: #eeeeec;
    font-size: 0.8em;
    border-radius: 2px;
    z-index: 1004;
    font-weight: normal;
    max-width: 300px;
}
.umap-tooltip #umap-tooltip-container {
    display: block;
}
#umap-tooltip-container.tooltip-top:after {
    top: 100%;
    left: calc(50% - 11px);
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none;
    border-top-color: rgba(30, 30, 30, 0.8);
    border-width: 11px;
    margin-left: calc(-50% + 21px);
}
#umap-tooltip-container.tooltip-bottom:before {
    top: -22px;
    left: calc(50% - 11px);
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none;
    border-top-color: rgba(30, 30, 30, 0.7);
    border-width: 11px;
    transform: rotate(180deg);
}
#umap-tooltip-container.tooltip.tooltip-left:after {
    left: 100%;
    top: 50%;
    border: solid transparent;
    content: " ";
    height: 0;
    width: 0;
    position: absolute;
    pointer-events: none;
    border-color: rgba(136, 183, 213, 0);
    border-left-color: #333;
    border-width: 11px;
    margin-top: -10px;
}



/* *********** */
/* Close link  */
/* *********** */
.umap-close-icon {
    background-repeat: no-repeat;
    background-image: url('./img/16.svg');
    background-position: -28px -6px;
    display: inline;
    padding: 0 10px;
    vertical-align: middle;
}
.dark .umap-close-icon {
    background-image: url('./img/16-white.svg');
}
.dark .umap-close-link {
    border: 1px solid #202425;
    color: #eeeeec;
    padding: 0 7px;
    line-height: 32px;
    background-color: #323737;
}
.dark .umap-close-link:hover {
    background-color: #2e3436;
}
#umap-alert-container .umap-close-link {
    color: #fff;
    float: right;
    padding-right: 10px;
    width: 100px;
    line-height: 1;
    margin: .5rem;
    background-color: #666;
    font-size: .7rem;
}
#umap-alert-container .umap-close-icon {
    background-position: -74px -55px;
}
#umap-alert-container .umap-alert-actions {
    display: flex;
    margin: 1rem;
}
#umap-alert-container .umap-alert-actions .umap-action {
    margin-bottom: 0;
}


/* *********** */
/*   Various   */
/* *********** */

.umap-dragover:before {
    content:  ' ';
    background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" width="200" height="200" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="arcs">%3Cpath d="M3 15v4c0 1.1.9 2 2 2h14a2 2 0 0 0 2-2v-4M17 9l-5 5-5-5M12 12.8V2.5"/>%3C/svg>');
    background-repeat: no-repeat;
    background-position: center;
    background-color: #323e56;
    z-index: 401;
    display: block;
    position: absolute;
    width: 100vw;
    height: 100vh;
    opacity: 0.5;
}


/* *********** */
/*    Mobile   */
/* *********** */
@media all and (orientation:landscape) {
    .umap-edit-enabled #umap-ui-container {
        top: 46px;
    }
    #umap-ui-container {
        width: 400px;
        right: -400px;
        top:  0;
    }
    .umap-ui #umap-ui-container {
        right: 0;
    }
}
@media all and (orientation:portrait) {
    #umap-ui-container {
        height: 50%;
        max-height: 400px;
        width: 100%;
        bottom: 0;
        right: -100%;
    }
    .umap-ui #umap-ui-container {
        right: 0;
    }
    .umap-ui .leaflet-right {
        right: 0;
    }
    #umap-alert-container {
        width: 100%;
        left: 0;
        right: 0;
    }
}

